# lvar-examples

./: .gitmodules  .travis.yml  Makefile  README.md  data-race-example.hs  graph-traversal-explicit-freeze.hs  graph-traversal-implicit-freeze.hs  ivar-example.hs  map-lvar-freezeafter.hs  map-lvar-getkey.hs  map-lvar-waitsize.hs  map-synchronized.hs  parallel-and.hs  repeated-3-ivar.hs  repeated-3-lvar.hs  repeated-4-ivar.hs  repeated-4-lvar.hs  repeated-write-ivar.hs  repeated-write-lvar-max-counter.hs  repeated-write-lvar-wrong.hs  repeated-write-lvar.hs  set-data-race.hs  set-ioref-data-race.hs  set-synchronized.hs
1.1.1.3/: README.md  lvar-examples-old.cabal  repeated-4-ivar.hs  repeated-4-lvar.hs  set-lvar-freezeafter.hs  set-lvar-waitelem.hs
1.1.2/: README.md  data-race-example.hs  graph-traversal-explicit-freeze.hs  graph-traversal-implicit-freeze.hs  ivar-example.hs  lvar-examples-old.cabal  map-ioref-data-race.hs  map-lvar-freezeafter.hs  map-lvar-getkey-lib.hs  map-lvar-getkey.hs  map-lvar-quasi.hs  pair-lvar.hs  parallel-and-product-lattice.hs  parallel-and-take-2.hs  parallel-and.hs  repeated-4-ivar.hs  repeated-4-lvar.hs  repeated-write-lvar-max-counter.hs  repeated-write-lvar-wrong.hs  set-ioref-data-race.hs  set-lvar-freezeafter.hs  set-lvar-quasi.hs  set-lvar-waitelem.hs  set-lvar-waitsize.hs  set-synchronized.hs
1.1.4/: README.md  data-race-example.hs  graph-traversal-explicit-freeze.hs  graph-traversal-implicit-freeze.hs  ivar-example.hs  lvar-examples-old.cabal  map-lvar-freezeafter.hs  map-lvar-getkey-lib.hs  map-lvar-quasi.hs  map-lvar-waitsize.hs  map-synchronized.hs  pair-lvar.hs  parallel-and-product-lattice.hs  repeated-4-ivar.hs  repeated-4-lvar.hs  repeated-write-lvar-max-counter.hs  set-lvar-waitelem.hs
2.0/: README.md  disjoint-parallel-update.hs  graph-traversal-explicit-freeze.hs  graph-traversal-freezesetafter.hs  graph-traversal-implicit-freeze.hs  lvar-examples-new.cabal  map-lvar-freezeafter.hs  map-lvar-getkey-lib.hs  map-lvar-getkey.hs  map-lvar-quasi.hs  map-lvar-waitsize.hs  parallel-and-product-lattice.hs  parallel-and.hs  repeated-4-lvar.hs  repeated-write-lvar-wrong.hs  set-lvar-freezeafter.hs  set-lvar-quasi.hs  set-lvar-waitelem.hs  set-lvar-waitsize.hs
lvish-1.1.1.3/: Makefile  README.md  repeated-write-lvar-max-counter.hs
lvish-new/: Makefile  README.md  graph-traversal-implicit-freeze.hs  lvar-examples-new.cabal  map-ioref-data-race.hs  map-lvar-freezeafter.hs  map-lvar-getkey-lib.hs  map-lvar-quasi.hs  pair-lvar.hs  parallel-and.hs  repeated-write-lvar-wrong.hs  set-lvar-freezeafter.hs  set-lvar-quasi.hs  set-lvar-waitelem.hs  set-lvar-waitsize.hs
